testing/tests/ui/pluralize.stderr
error[E0277]: the trait bound `str: PluralizeCount` is not satisfied
 --> tests/ui/pluralize.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^ the trait `PluralizeCount` is not implemented for `str`, which is required by `&str: PluralizeCount`
  |
  = help: the following other types implement trait `PluralizeCount`:
            &T
            &mut T
            Arc<T>
            Box<T>
            MutexGuard<'_, T>
            NonZero<i128>
            NonZero<i16>
            NonZero<i32>
          and $N others
  = note: required for `&str` to implement `PluralizeCount`
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
